# gladio

./: CMakeLists.txt  README.md
.github/workflows/: build-release.yml
include/: file_utils.h  gl_buffer.h  gl_client_state.h  gl_context.h  gl_dsa.h  gl_enums.h  gl_vao.h  gladio.h  image_utils.h  request_codes.h  texture_utils.h
include/GL/: gl.h  glx.h
include/X11/: Xlib.h  Xutil.h
src/: gl_buffer.c  gl_calls.c  gl_vao.c  glx_calls.c  main.c
